# context-handoff-bundle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/commands/: handoff-list.md  handoff-load.md  handoff-save.md  handoff-show.md
.github/workflows/: ci.yml
commands/: handoff-list.md  handoff-load.md  handoff-save.md
docs/: BEFORE_AFTER_GUIDE.md  CLAUDE_CODE_BUILD_SPEC.md  CLAUDE_EXECUTION_PROMPT.md  EVALUATION.md  OPERATOR_NOTE.md  QUICKSTART.md  ROADMAP.md  SPEC.md
examples/: dashclaw-architecture-notes.md  sample-notes.md
examples/2026-04-06-generated-from-sample/: CONTEXT_HANDOFF.md  evidence_index.json  relations.json  summary.json
examples/2026-04-06-public-prototype/: bundle_metadata.json  entities.json  evidence_index.json  open_questions.json  relations.json  resume_prompt.txt
examples/2026-04-06-public-prototype-generated/: CONTEXT_HANDOFF.md  bundle_metadata.json  entities.json  graph.json  open_questions.json  resume_prompt.txt  summary.json
examples/2026-04-06-richer-test/: summary.json
schemas/: evidence_index.schema.json  open_questions.schema.json  relations.schema.json  summary.schema.json
src/context_handoff_bundle/: __init__.py  __main__.py  anchors.py  autocontext.py  cli.py  compare.py  drift.py  freshness.py  quality.py  resume.py  storage.py  tokens.py
src/context_handoff_bundle/schemas/: bundle_metadata.schema.json  entities.schema.json  evidence_index.schema.json
templates/: CONTEXT_HANDOFF.template.md  bundle_metadata.template.json
tests/: README.md  test_anchors.py  test_drift.py  test_save_load.py  test_smoke.md  test_tokens.py
